ANTLR4/LenguajeParser.py
# Generated from Lenguaje.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LenguajeParser ( Parser ):

    grammarFileName = "Lenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<i>'", "'<o>'", "'if'", "'else'", "'while'", 
                     "'{'", "'}'", "'#'", "<INVALID>", "<INVALID>", "'::'", 
                     "'<-'", "'<<'", "'>>'", "'('", "')'", "'['", "']'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'/='", "'>'", 
                     "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SIZE", "TACTIC", "PROCNAME", "ASSIGN", "AGREGADO", 
                      "LB", "RB", "LP", "RP", "LS", "RS", "SUM", "MIN", 
                      "MUL", "DIV", "MOD", "EQ", "NEQ", "GT", "LT", "GET", 
                      "LET", "VAR", "NUM", "STRING", "WS" ]

    RULE_root = 0
    RULE_inss = 1
    RULE_ins = 2
    RULE_input_ = 3
    RULE_output_ = 4
    RULE_condition = 5
    RULE_while_ = 6
    RULE_siz = 7
    RULE_procDef = 8
    RULE_proc = 9
    RULE_assign = 10
    RULE_paramsId = 11
    RULE_paramsExpr = 12
    RULE_consult = 13
    RULE_agregado = 14
    RULE_lista = 15
    RULE_expr = 16

    ruleNames =  [ "root", "inss", "ins", "input_", "output_", "condition", 
                   "while_", "siz", "procDef", "proc", "assign", "paramsId", 
                   "paramsExpr", "consult", "agregado", "lista", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    SIZE=8
    TACTIC=9
    PROCNAME=10
    ASSIGN=11
    AGREGADO=12
    LB=13
    RB=14
    LP=15
    RP=16
    LS=17
    RS=18
    SUM=19
    MIN=20
    MUL=21
    DIV=22
    MOD=23
    EQ=24
    NEQ=25
    GT=26
    LT=27
    GET=28
    LET=29
    VAR=30
    NUM=31
    STRING=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LenguajeParser.EOF, 0)

        def procDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ProcDefContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ProcDefContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = LenguajeParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 34
                self.procDef()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(LenguajeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InssContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ins(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.InsContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.InsContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_inss

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInss" ):
                listener.enterInss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInss" ):
                listener.exitInss(self)




    def inss(self):

        localctx = LenguajeParser.InssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inss)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1073742894) != 0):
                self.state = 42
                self.ins()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(LenguajeParser.ConditionContext,0)


        def while_(self):
            return self.getTypedRuleContext(LenguajeParser.While_Context,0)


        def input_(self):
            return self.getTypedRuleContext(LenguajeParser.Input_Context,0)


        def output_(self):
            return self.getTypedRuleContext(LenguajeParser.Output_Context,0)


        def proc(self):
            return self.getTypedRuleContext(LenguajeParser.ProcContext,0)


        def assign(self):
            return self.getTypedRuleContext(LenguajeParser.AssignContext,0)


        def agregado(self):
            return self.getTypedRuleContext(LenguajeParser.AgregadoContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_ins

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIns" ):
                listener.enterIns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIns" ):
                listener.exitIns(self)




    def ins(self):

        localctx = LenguajeParser.InsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ins)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 48
                    self.condition()
                    pass
                elif token in [5]:
                    self.state = 49
                    self.while_()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 52
                    self.input_()
                    pass
                elif token in [2]:
                    self.state = 53
                    self.output_()
                    pass
                elif token in [10]:
                    self.state = 54
                    self.proc()
                    pass
                elif token in [30]:
                    self.state = 55
                    self.assign()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.agregado()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LenguajeParser.VAR, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_input_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_" ):
                listener.enterInput_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_" ):
                listener.exitInput_(self)




    def input_(self):

        localctx = LenguajeParser.Input_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_input_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(LenguajeParser.T__0)
            self.state = 62
            self.match(LenguajeParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ExprContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_output_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_" ):
                listener.enterOutput_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_" ):
                listener.exitOutput_(self)




    def output_(self):

        localctx = LenguajeParser.Output_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_output_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(LenguajeParser.T__1)
            self.state = 66 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 65
                    self.expr(0)

                else:
                    raise NoViableAltException(self)
                self.state = 68 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LenguajeParser.ExprContext,0)


        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeParser.LB)
            else:
                return self.getToken(LenguajeParser.LB, i)

        def inss(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.InssContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.InssContext,i)


        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeParser.RB)
            else:
                return self.getToken(LenguajeParser.RB, i)

        def getRuleIndex(self):
            return LenguajeParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = LenguajeParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LenguajeParser.T__2)
            self.state = 71
            self.expr(0)
            self.state = 72
            self.match(LenguajeParser.LB)
            self.state = 73
            self.inss()
            self.state = 74
            self.match(LenguajeParser.RB)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 75
                self.match(LenguajeParser.T__3)
                self.state = 76
                self.match(LenguajeParser.LB)
                self.state = 77
                self.inss()
                self.state = 78
                self.match(LenguajeParser.RB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LenguajeParser.ExprContext,0)


        def LB(self):
            return self.getToken(LenguajeParser.LB, 0)

        def inss(self):
            return self.getTypedRuleContext(LenguajeParser.InssContext,0)


        def RB(self):
            return self.getToken(LenguajeParser.RB, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_while_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_" ):
                listener.enterWhile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_" ):
                listener.exitWhile_(self)




    def while_(self):

        localctx = LenguajeParser.While_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_while_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(LenguajeParser.T__4)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(LenguajeParser.LB)
            self.state = 85
            self.inss()
            self.state = 86
            self.match(LenguajeParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIZE(self):
            return self.getToken(LenguajeParser.SIZE, 0)

        def VAR(self):
            return self.getToken(LenguajeParser.VAR, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_siz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSiz" ):
                listener.enterSiz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSiz" ):
                listener.exitSiz(self)




    def siz(self):

        localctx = LenguajeParser.SizContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_siz)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(LenguajeParser.SIZE)
            self.state = 89
            self.match(LenguajeParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(LenguajeParser.PROCNAME, 0)

        def paramsId(self):
            return self.getTypedRuleContext(LenguajeParser.ParamsIdContext,0)


        def LB(self):
            return self.getToken(LenguajeParser.LB, 0)

        def inss(self):
            return self.getTypedRuleContext(LenguajeParser.InssContext,0)


        def RB(self):
            return self.getToken(LenguajeParser.RB, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_procDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcDef" ):
                listener.enterProcDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcDef" ):
                listener.exitProcDef(self)




    def procDef(self):

        localctx = LenguajeParser.ProcDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_procDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(LenguajeParser.PROCNAME)
            self.state = 92
            self.paramsId()
            self.state = 93
            self.match(LenguajeParser.LB)
            self.state = 94
            self.inss()
            self.state = 95
            self.match(LenguajeParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(LenguajeParser.PROCNAME, 0)

        def paramsExpr(self):
            return self.getTypedRuleContext(LenguajeParser.ParamsExprContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ExprContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_proc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc" ):
                listener.enterProc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc" ):
                listener.exitProc(self)




    def proc(self):

        localctx = LenguajeParser.ProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_proc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(LenguajeParser.PROCNAME)
            self.state = 98
            self.paramsExpr()
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.expr(0) 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LenguajeParser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(LenguajeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(LenguajeParser.ExprContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = LenguajeParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(LenguajeParser.VAR)
            self.state = 106
            self.match(LenguajeParser.ASSIGN)
            self.state = 107
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeParser.VAR)
            else:
                return self.getToken(LenguajeParser.VAR, i)

        def getRuleIndex(self):
            return LenguajeParser.RULE_paramsId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamsId" ):
                listener.enterParamsId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamsId" ):
                listener.exitParamsId(self)




    def paramsId(self):

        localctx = LenguajeParser.ParamsIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramsId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 109
                self.match(LenguajeParser.VAR)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ExprContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_paramsExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamsExpr" ):
                listener.enterParamsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamsExpr" ):
                listener.exitParamsExpr(self)




    def paramsExpr(self):

        localctx = LenguajeParser.ParamsExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paramsExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 115
                    self.expr(0) 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConsultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LenguajeParser.VAR, 0)

        def LS(self):
            return self.getToken(LenguajeParser.LS, 0)

        def expr(self):
            return self.getTypedRuleContext(LenguajeParser.ExprContext,0)


        def RS(self):
            return self.getToken(LenguajeParser.RS, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_consult

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsult" ):
                listener.enterConsult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsult" ):
                listener.exitConsult(self)




    def consult(self):

        localctx = LenguajeParser.ConsultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_consult)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(LenguajeParser.VAR)
            self.state = 122
            self.match(LenguajeParser.LS)
            self.state = 123
            self.expr(0)
            self.state = 124
            self.match(LenguajeParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgregadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LenguajeParser.VAR, 0)

        def AGREGADO(self):
            return self.getToken(LenguajeParser.AGREGADO, 0)

        def expr(self):
            return self.getTypedRuleContext(LenguajeParser.ExprContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_agregado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgregado" ):
                listener.enterAgregado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgregado" ):
                listener.exitAgregado(self)




    def agregado(self):

        localctx = LenguajeParser.AgregadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_agregado)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LenguajeParser.VAR)
            self.state = 127
            self.match(LenguajeParser.AGREGADO)
            self.state = 128
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ExprContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_lista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista" ):
                listener.enterLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista" ):
                listener.exitLista(self)




    def lista(self):

        localctx = LenguajeParser.ListaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_lista)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(LenguajeParser.T__5)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7516226368) != 0):
                self.state = 131
                self.expr(0)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(LenguajeParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LenguajeParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ExprContext,i)

        def MOD(self):
            return self.getToken(LenguajeParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMod" ):
                listener.enterMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMod" ):
                listener.exitMod(self)


    class TacticContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TACTIC(self):
            return self.getToken(LenguajeParser.TACTIC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTactic" ):
                listener.enterTactic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTactic" ):
                listener.exitTactic(self)


    class MulContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.ExprContext,i)

        def MUL(self):
            return self.getToken(LenguajeParser.MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)


    class VarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(LenguajeParser.VAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LP(self):
            return self.getToken(LenguajeParser.LP, 0)
        def expr(self):
            return self.getTypedRuleContext(LenguajeParser.ExprContext,0)

        def RP(self):
            return self.getToken(LenguajeParser.RP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class NumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)
